Kubernetes Ingress/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-microservice
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-microservice
  template:
    metadata:
      labels:
        app: nodejs-microservice
    spec:
      containers:
      - name: nodejs-svc-ingress
        image: nodejs-svc-ingress:0.1
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
