Kubernetes Ingress/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-microservice
  namespace: default
spec:
  selector:
    app: nodejs-microservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
