Kubernetes Ingress/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-microservice-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-microservice
            port:
              number: 80
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: nodejs-microservice
            port:
              number: 80
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: nodejs-microservice
            port:
              number: 80
